ui alignment fix maindashboard,job, candidate, reference request , reports

--- a/src/styles/AiReferenceStyles/AiReferenceCandidates.css
+++ b/src/styles/AiReferenceStyles/AiReferenceCandidates.css
@@ -15,9 +15,8 @@
 .search-wrapper input {
   border-radius: 20px;
   width: 300px;
-  background: #d9d9d9;
-  border: 1px solid var(--card-color); /* Make sure the --avatar-bg variable is defined in your styles */
-}
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border: 0.5px solid rgba(0, 0, 0, 0.25);}
 
 .search-wrapper .search-icon {
   right: 10px !important;
@@ -60,8 +59,9 @@
 }
 .AiReference-candidates-container {
   background: var(--font-white);
-  border: 1px solid var(--card-color);
-  border-radius: 20px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border: 0.5px solid rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
   padding: 20px;
   height: 60vh;
 }
@@ -72,11 +72,13 @@
   width: 100%;
   height: 80%;
   border-collapse: collapse; /* Ensure borders are collapsed */
+  font-size: 15px;
 }
 
 .AiReference-candidates-container tbody {
   display: block; /* Make tbody a block element */
   overflow-y: auto; /* Enable vertical scrolling */
+  overflow-x: hidden;
   height: 100%;
 }
 
@@ -119,9 +121,11 @@
 .AiReference-candidates-container td:nth-child(4){
   width: 8%;
 }
-.AiReference-candidates-container th:nth-child(5),
 .AiReference-candidates-container td:nth-child(5){
   width: 31%;
+}
+.AiReference-candidates-container th:nth-child(5){
+width: 31.7%;
 }
 
 .AiReference-candidates-container .btn-view-details {
